tendtaod calculadora incmompleto

--- a/calculadora_discreta3/propriedades.css
+++ b/calculadora_discreta3/propriedades.css
@@ -11,7 +11,7 @@
 }
 a{
 aligh:rigth;
-margin-left:23cm;}
+}
 /*
 E  os campo prapreeencherp recisam estar vocm  a classe  class="form-control" pro Boostrpa agir drieto no menu
 conultei isso no site od Boostrap
@@ -19,8 +19,8 @@ conultei isso no site od Boostrap
 #texto{background: #c0c0c0}
 text{margin-left=10%}
 
-input[type=file]{
-	background
+input[type=button]{
+margin:0%
 	/*https://pt.stackoverflow.com/questions/41643/d%C3%BAvida-sobre-estiliza%C/3%A7%C3%A3o-de-input-submit
 a foto de clips https://www.pexels.com/pt-br/foto/foto-do-clipe-de-papel-roxo-sobre-fundo-verde-3690543/
 
